--- a/index.html
+++ b/index.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<title>lesson10</title>
 </head>
 <body>
 	<section class="section-bg">
-		<header>
-			<a href="#">
-				<p>Landings</p>
+		<header class="header-flex">
+			<a class="p-logo"  href="#">
+				<p> Landings</p>
 			</a>
 			<nav>
-				<ul>
-					<li>
-						<a href="#"></a>
+				<ul class="navigation-ul">
+					<li class="navigation-li" >
+						<a class="nav-a" href="#">Home</a>
 					</li>
-					<li>
-						<a href="#">Home</a>
+					<li class="navigation-li" >
+						<a class="nav-a" href="#">News</a>
 					</li>
-					<li>
-						<a href="#">News</a>
+					<li class="navigation-li" >
+						<a class="nav-a" href="#">Contact</a>
 					</li>
-					<li>
-						<a href="#">Contact</a>
-					</li>
-					<li>
-						<a href="#">Blog</a>
+					<li class="navigation-li" >
+						<a class="nav-a" href="#">Blog</a>
 					</li>
 				</ul>
 			</nav>
-
-			
 		</header>
+		<div class="bg-title">
+		  <h1>Lorem Ipsum</h1>
+	</div>
+	<div class="bg-text">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
 		
 	</section>
 
