--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<title>lesson10</title>
@@ -29,15 +30,92 @@
 				</ul>
 			</nav>
 		</header>
-		<div class="bg-title">
+		<div class="bg-title d-flex-center">
 		  <h1>Lorem Ipsum</h1>
 	</div>
-	<div class="bg-text">
+	<div class="bg-text d-flex-center">
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
-		
+      <div class="button-bg d-flex-center">
+      	<button class="btn"> View Our Projects</button>
+		</div>
 	</section>
+ <section>
+ 	<div class="section-flex">
+ 		<div class="left-block">
+ 			<p class="block-p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+ 			<p class="block-p2">
+ 				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+ 			    Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+ 			<button class="btn"> View Our Projects</button>
+ 		</div>
+ 		<div class="right-block">
+ 			<img src="image/rectangle.jpg.jpg" alt="rectangle">
+ 		</div>
+ 		
+ 	</div>
+ </section>
+ <!-- <section class="grey-bg-section">
+		<div class="container">
+			<h2 class="section-title"> Lorem ipsum dolor sit </h2>
+			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			<div class="box-section1"> -->
+<!-- 				<div class="small-box d-flex-center">
+					<div class="icon d-flex-center">
+						<img src="image/icon1.png.png" alt="icon-logo">
+					</div>
+					<h5> text </h5>
+					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
+				</div>
+				<div class="small-box d-flex-center">
+					<div class="icon d-flex-center">
+						<img src="image/icon2.png.png" alt="icon-logo">
+					</div>
+					<h5> text </h5>
+					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
+				</div>
+				<div class="small-box d-flex-center">
+					<div class="icon d-flex-center">
+						<img src="image/icon3.png.png" alt="icon-logo">
+					</div>
+					<h5> text </h5>
+					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
+				</div>
+			</div>
+			<div class="box-section1">
+				<div class="small-box d-flex-center">
+					<div class="icon d-flex-center">
+						<img src="image/icon4.png.png" alt="icon-logo">
+					</div>
+					<h5> text </h5>
+					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
+				</div>
+				<div class="small-box d-flex-center">
+					<div class="icon d-flex-center">
+						<img src="image/icon5.png.png" alt="icon-logo">
+					</div>
+					<h5> text </h5>
+					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
+				</div>
+				<div class="small-box d-flex-center">
+					<div class="icon d-flex-center">
+						<img src="image/icon6.png.png" alt="icon-logo">
+					</div>
+					<h5> text </h5>
+					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
+				</div>
+			</div> -->
+			<section>
+				<div class="big-box">
+					<div class="small-box d-flex-center">
+						<div class="icon d-flex-center">
+							<img src="">
+						</div>
+	      </div>
 
+				</div>
+				
+			</section>
 </body>
 </html>
