--- a/index.html
+++ b/index.html
@@ -56,66 +56,95 @@
  		
  	</div>
  </section>
- <!-- <section class="grey-bg-section">
+ <section class="grey-bg-section">
 		<div class="container">
 			<h2 class="section-title"> Lorem ipsum dolor sit </h2>
-			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-			<div class="box-section1"> -->
-<!-- 				<div class="small-box d-flex-center">
-					<div class="icon d-flex-center">
-						<img src="image/icon1.png.png" alt="icon-logo">
-					</div>
-					<h5> text </h5>
-					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
-				</div>
-				<div class="small-box d-flex-center">
-					<div class="icon d-flex-center">
-						<img src="image/icon2.png.png" alt="icon-logo">
-					</div>
-					<h5> text </h5>
-					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
-				</div>
-				<div class="small-box d-flex-center">
-					<div class="icon d-flex-center">
-						<img src="image/icon3.png.png" alt="icon-logo">
-					</div>
-					<h5> text </h5>
-					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
-				</div>
-			</div>
-			<div class="box-section1">
-				<div class="small-box d-flex-center">
-					<div class="icon d-flex-center">
-						<img src="image/icon4.png.png" alt="icon-logo">
-					</div>
-					<h5> text </h5>
-					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
-				</div>
-				<div class="small-box d-flex-center">
-					<div class="icon d-flex-center">
-						<img src="image/icon5.png.png" alt="icon-logo">
-					</div>
-					<h5> text </h5>
-					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
-				</div>
-				<div class="small-box d-flex-center">
-					<div class="icon d-flex-center">
-						<img src="image/icon6.png.png" alt="icon-logo">
-					</div>
-					<h5> text </h5>
-					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
-				</div>
-			</div> -->
+			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus. Nunc varius ullamcorper felis. Nulla nibh ipsum, rutrum.</p>
+		</div>
+	</section>
 			<section>
+				<div class="container">
 				<div class="big-box">
 					<div class="small-box d-flex-center">
 						<div class="icon d-flex-center">
-							<img src="">
+							<img src="image/icon1.png.png" alt="icon-logo">
 						</div>
+						<h5>Peace of Mind</h5>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
 	      </div>
+	           <div class="small-box d-flex-center">
+						<div class="icon d-flex-center">
+							<img src="image/icon2.png.png" alt="icon-logo">
+						</div>
+						<h5>Coffee Breaks</h5>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
+	      </div>
+	          <div class="small-box d-flex-center">
+						<div class="icon d-flex-center">
+							<img src="image/icon3.png.png" alt="icon-logo">
+						</div>
+						<h5>Rewards</h5>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
+	      </div>
+	         <div class="small-box d-flex-center">
+						<div class="icon d-flex-center">
+							<img src="image/icon4.png.png" alt="icon-logo">
+						</div>
+						<h5>Delivery</h5>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
+	      </div>
+             <div class="small-box d-flex-center">
+						<div class="icon d-flex-center">
+							<img src="image/icon5.png.png" alt="icon-logo">
+						</div>
+						<h5>Inbox</h5>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
+	      </div>
+            <div class="small-box d-flex-center">
+						<div class="icon d-flex-center">
+							<img src="image/icon6.png.png" alt="icon-logo">
+						</div>
+						<h5>Settings</h5>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
+	      </div>
+		 </div>
+     <section class="section-box3">
+		 	<h4> Our Case Studies</h4>
+		 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus. Nunc varius ullamcorper felis. Nulla nibh ipsum, rutrum.</p>
+		 	
+		 </section>
+		 <div class="section-flex-box">
+ 		<div class="left-block-box">
+ 			<p class="block-pa1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+ 			<p class="block-pa2">
+ 				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+ 			    Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+ 			<button class="btn"> View Our Projects</button>
+ 		</div>
+ 		<div class="right-block-box1">
+ 			<img src="image/svetik.jpg.jpg" alt="svetik">
+ 		</div>
+ 		<!-- <section>
+ 		<div class="left-block-box1">
+ 			<img src="image/razmytost.jpg.jpg" alt="razmytost">
+ 		</div>
+ 		 <div class="section-flex-box1">
+ 		<div class="right-block-box1">
+ 			<p class="block-pa11">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+ 			<p class="block-pa22">
+ 				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+ 			    Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+ 			<button class="btn"> View Our Projects</button>
+ 		</div>
+ 		</section>
+ -->
 
-				</div>
-				
-			</section>
+
+ 	</div>
+</div>
+
+	
+	</section>
+
 </body>
 </html>
