--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 						<h5>Rewards</h5>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique </p>
 	      </div>
+
 	         <div class="small-box d-flex-center">
 						<div class="icon d-flex-center">
 							<img src="image/icon4.png.png" alt="icon-logo">
@@ -122,29 +123,42 @@
  			<button class="btn"> View Our Projects</button>
  		</div>
  		<div class="right-block-box1">
- 			<img src="image/svetik.jpg.jpg" alt="svetik">
+ 			<img src="image/rectangle.jpg.jpg" alt="rectangle">
  		</div>
- 		<!-- <section>
- 		<div class="left-block-box1">
- 			<img src="image/razmytost.jpg.jpg" alt="razmytost">
+
+ </div>
+ <section>
+
+  <div class="section-flex">
+ 		
+ 		<div class="right-box">
+ 			<img src="image/rectangle.jpg.jpg" alt="rectangle">
  		</div>
- 		 <div class="section-flex-box1">
- 		<div class="right-block-box1">
- 			<p class="block-pa11">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
- 			<p class="block-pa22">
+ 		<div class="left-box">
+ 			<p class="p-block1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+ 			<p class="p-block2">
  				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  			    Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
  			<button class="btn"> View Our Projects</button>
  		</div>
- 		</section>
- -->
-
+ 	</div>
+ </section>
+ <section>
+ 	 <div class="section-flex-box">
+ 		<div class="left-block-box">
+ 			<p class="block-pa1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+ 			<p class="block-pa2">
+ 				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+ 			    Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+ 			<button class="btn"> View Our Projects</button>
+ 		</div>
+ 		<div class="right-block-box1">
+ 			<img src="image/rectangle.jpg.jpg" alt="rectangle">
+ 		</div>
 
  	</div>
-</div>
-
-	
 	</section>
-
+</div>
+</div>
 </body>
 </html>
